Improve resizing to fix bluriness, fix cropped sprite coordinates

--- a/src/components/chickenCanvas/chickenCanvas.module.scss
+++ b/src/components/chickenCanvas/chickenCanvas.module.scss
@@ -2,7 +2,5 @@
   position: absolute;
   top: 0;
   left: 0;
-  transform: scale(2);
-  transform-origin: top left;
   pointer-events: none;
 }
